# mux-protocol

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  MANIFEST.in  MUX.md  README.md  pyproject.toml  setup.py
bench/: baseline.py  loadbench.py  loadgen.go  node.sh
build-rel/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  edge
build-rel/tests/: CTestTestfile.cmake  cmake_install.cmake
common/: auth.c  auth.h  evloop.c  evloop.h  net.c  net.h  relay.c  relay.h
deploy/: Dockerfile.publish  RUN.md  bench.sh  bench_baseline.sh  docker-compose.baseline.yml  docker-compose.bench.yml  docker-compose.fedora.yml  docker-compose.node.yml  docker-compose.yml  run_demo.sh  supervisord.conf
edge/: main.c
edge-peer/: main.c  router.c  router.h
examples/: http_worker.c
examples/python-app/: Dockerfile  app.py  app_async.py  supervisord.conf
libmux/include/: mux.h
libmux/src/: frame.c  session.c
libpeer/include/: libpeer.h
libpeer/src/: libpeer.c
python/: muxpeer_aio.py  muxpeermodule.c  setup.py  worker.py
tests/: CMakeLists.txt  test_auth.c  test_frame.c  test_libpeer.c  test_session.c
tests/fuzz/: fuzz_frame.c  standalone_main.c
